<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ZIWAPHI</string>
    <string name="add_report">Add Report</string>
    <string name="my_reports">My Reports</string>
    <string name="app_id" translatable="false">500750433359090</string>
    <string name="title_projects">Stories</string>
    <string name="title_lessons">Lessons</string>
    <string name="title_assignments">Assignments</string>
    <string name="action_publish">Publish</string>
    <string name="title_latest_reports">Latest Reports</string>
    <string name="title_my_reports">My Reports</string>
    <string name="add">Add</string>
    <string name="view">View Reports</string>
    <string name="help">Help</string>
    <string name="sync">Sync</string>
    <string name="export_option">Include already synced/exported files</string>
    <string name="export">Export</string>
    <string name="add_caption">Add Caption</string>
	<string name="skip">Skip</string>
	<string name="add_caption_alert">Do you want to a caption?</string>
	<string name="str_atv_places">Start typing place name</string>
	<string name="add_picture">Add Picture</string>
	<string name="add_video">Add Video</string>
	<string name="add_audio">Add Audio</string>
	<string name="import_from_gallery">Import From Gallery</string>
	<string name="view_website">Go to ZIWAPHI website</string>
	<string name="built_by">Built by</string>
	<string name="built_for">For</string>
	<string name="the_star">ZIWAPHI</string>
	<string name="view_gallery">Gallery</string>
	<string name="description_field">Description</string>
	<string name="done">Done</string>
	<string name="unsaved_changes_alert">You have unsaved changes!</string>
	<string name="save">Save</string>
	<string name="discard">Discard</string>
    <string name="report_status">Status</string>
    <string name="delete_report_confirmation">Are you sure you want to delete?</string>
    <string name="reports_list">List of reports</string>
    <string name="prefs_encryption">Encrypt Media</string>
    <string name="prefs_encryption_summary">Encrypted media will not be viewable outside of the application without decryption</string>
    <string name="strapline">Fighting Misinformation and \n Holding the Powerful Accountable</string>
        <string name="strapline_1">Fighting Misinformation and</string>
            <string name="strapline_2">Holding the Powerful Accountable</string>
    <string name="publish_single">Publish</string>
    <string name="publish_dialog_alert">Do you wish to publish this now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about">ZIWAPHI is a simple and easy-to-use experience for users, minimising barriers to submitting media and providing an intuitive experience.</string>
    <string name="report_add_title">Title</string>
    <string name="report_add_description">Description</string>
    <string name="report_add_category">Category</string>
    <string name="report_add_location">Location</string>
    <string name="report_add_additional">Additional</string>
    <string name="report_add_title_desc">Your story title</string>
    <string name="report_add_description_desc">Provide a compelling context</string>
    <string name="report_add_category_desc">Add a suitable category</string>
    <string name="report_add_location_desc">Where was this story captured</string>
    <string name="report_add_contact_desc">Add contact information of your news source</string>
    <string name="stay_logged_in">Stay logged in?</string>
    <string-array name="categories">
        <item>Select Category</item>
        <item>General</item>
        <item>Politics</item>
        <item>Environment</item>
        <item>News</item>
    </string-array>
    <string name="menu_new_project">New</string>
    <string name="menu_projects">Stories</string>
    <string name="menu_lessons">Lessons</string>
    <string name="menu_glossary">Glossary</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_archive">Archive</string>
    <string name="drawer_profile">Login</string>
    <string name="menu_add_media">Add</string>
    <string name="menu_capture_media">Record</string>
    <string name="menu_share_media">Share</string>
    <string name="menu_save_media">Save</string>
    <string name="menu_play_media">Play</string>
    <string name="menu_render_media">Render</string>
    <string name="menu_bug_report">Bug Report</string>
    <string name="menu_login">Login</string>
    <string name="menu_logs">Send Log</string>
    <string name="menu_update">Update</string>
    <string name="menu_about">About</string>
    <string name="menu_save_project">Save</string>
    <string name="menu_overlay_camera">Camera</string>
    <string name="menu_add_from_gallery">Import from Gallery</string>
    <string name="menu_add_new_shot">Add Clip to Scene</string>
    <string name="menu_del_shot">Delete Current Clip</string>
    <string name="menu_export_project_files">Export Project Files as Zip</string>
    <string name="menu_join_storymaker">Join the StoryMaker Community</string>
    <string name="menu_sign_up">Sign Up / Login</string>
    <string name="menu_upload_manager">Upload Manager</string>
    <string name="welcome_message">Hey there!\nWelcome to StoryMaker</string>
	<string name="show_password">Show password</string>
    <string name="default_project_list_view">This is your first time creating a project!\n\n- tap to start -</string>
    <string name="default_project_view_message">You have choices.\nTell your story with video, audio or photos.\n\n- tap to add -</string>
    <string name="pref_out_fps_title">Output Framerate (fps)</string>
    <string name="pref_out_fps_summary">Frames per second to save output video at (15-30)</string>
    <string name="pref_out_rate_title">Output Bitrate (kbps)</string>
    <string name="pref_out_rate_summary">Bitrate of video output (300-1500)</string>
    <string name="pref_out_format_title">Output Format</string>
    <string name="pref_out_format_summary">File container format (mp4, 3gp, ogg)</string>
    <string name="pref_out_vcodec_title">Output Video Codec</string>
    <string name="pref_out_vcodec_summary">video codec (copy, libx264, etc)</string>
    <string name="pref_out_acodec_title">Output Audio Codec</string>
    <string name="pref_out_acodec_summary">audio codec (copy, aac, mp3, etc)</string>
    <string name="pref_out_vwidth_title">Custom Video Width (px)</string>
    <string name="pref_out_vwidth_summary">custom video width for outputed video</string>
    <string name="pref_out_vheight_title">Custom Video Height (px)</string>
    <string name="pref_out_vheight_summary">custom video height for outputed video</string>
    <string name="hintTitle">title</string>
    <string name="hintStartTime">start (00:00:00)</string>
    <string name="hintEndTime">duration (00:00:00)</string>
    <string name="hintFadeIn">fade in (frames)</string>
    <string name="hintFadeOut">fade out (frames)</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="play_recording">Play</string>
    <string name="save_recording">Save</string>
    <string name="downloading_lessons_from_server_">Downloading lessons from server...</string>
    <string name="checking_for_updates_">Checking for updates...</string>
    <string name="app_name_lc">Log Collector</string>
    <string name="message_subject">Android device log</string>
    <string name="acquiring_log_progress_dialog_message">Acquiring log from the system\u2026</string>
    <string name="chooser_title">"Select an application to send the log"</string>
    <string name="failed_to_get_log_message">"Failed to get the log from the system."</string>
    <string name="main_dialog_text">"This application will attempt to collect the device log.
The collected log will be sent using an application of your choice.
You also will have an opportunity to see and modify the data being sent."</string>
    <string name="title_home_projects">Projects</string>
    <string name="title_home_activity">Activity</string>
    <string name="title_lessons_lessons">Lessons</string>
    <string name="title_lessons_glossary">Glossary</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_home">Home</string>
    <string name="new_story_name_it">Name it.</string>
    <string name="new_story_working_title">Working title…</string>
    <string name="new_story_choose_something">Choose something brief that defines the topic and intrigues your audience.</string>
    <string name="new_story_choose_a_medium">Choose a medium.</string>
    <string name="new_story_simple_story">Simple Story</string>
    <string name="new_story_choose_template">Scene Template</string>
    <string name="home_new_story">MAKE A STORY</string>
    <string name="home_start_a_lesson">EXPLORE LESSONS</string>
    <string name="title_activity_new_story">You created a story!</string>
    <string name="title_activity_lessons">Lessons</string>
    <string name="title_activity_scene_editor">Scene Editor</string>
    <string name="title_activity_choose_template">Choose Template</string>
    <string name="title_activity_story_template">Template Story</string>
    <string name="tab_make">Make</string>
    <string name="tab_review">Review</string>
    <string name="tab_publish">Complete</string>
    <string name="tab_finish">Finish</string>
    <string name="tab_add_clips">Make</string>
    <string name="tab_order">Edit</string>
    <string name="story_publish_section">Section</string>
    <string name="story_publish_section_hint">Sports</string>
    <string name="story_publish_topics">Topics</string>
    <string name="story_publish_topics_hint">Gender</string>
    <string name="story_publish_location">Location</string>
    <string name="story_publish_location_hint">Enter relevant location</string>
    <string name="story_publish_share">Share</string>
    <string name="story_publish_send_via">Send Via</string>
    <string name="story_publish_status">Status</string>
    <string name="story_publish_status_processing">Processing</string>
    <string name="story_publish_status_not">Not Published</string>
    <string name="story_publish_describe_hint">Describe your story…</string>
    <string name="story_publish_story_title">Story Title here</string>
    <string name="story_publish_story_date">Story Date Here</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_activity_test_drag">TestDrag</string>
    <string name="recording">Recording</string>
    <string name="recording_stopped">Recording stopped</string>
    <string name="storage_is_full">Storage is full</string>
    <string name="max_length_reached">Maximum length reached</string>
    <string name="insert_sd_card">SD card is required</string>
    <string name="button_ok">OK</string>
    <string name="timer_format" translatable="false"><xliff:g id="format">%02d</xliff:g>:<xliff:g id="format">%02d</xliff:g></string>
    <string name="audio_db_title_format" translatable="false"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="audio_db_artist_name">Your recordings</string>
    <string name="audio_db_album_name">Audio recordings</string>
    <string name="audio_db_playlist_name">My recordings</string>
    <string name="error_sdcard_access">Unable to access external or internal storage</string>
    <string name="error_app_internal">Internal application error</string>
    <string name="error_mediadb_new_record">Unable to save recorded audio</string>
</resources>