<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvAbout"
        style="@style/CardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="18sp"
        android:textColor="@color/black" />

    <View
        android:id="@+id/vAbout"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/lp_grey"
        android:layout_below="@+id/tvAbout" />

    <RelativeLayout
        android:id="@+id/rlWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lp_grey"
        android:padding="2dp"
        android:layout_below="@+id/vAbout" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/ic_action_web_site" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/view_website"
	        style="@style/CardText" 
	        android:textSize="18sp"
	        android:textColor="@color/black"/>

    </RelativeLayout>

    <View
        android:id="@+id/vWebsite"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/lp_grey"
        android:layout_below="@+id/rlWebsite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/built_for"
        android:textAppearance="?android:attr/textAppearanceSmall"
        style="@style/CardText" 
	        android:textSize="18sp" 
	        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vWebsite"
        android:layout_centerHorizontal="true"
        android:text="@string/built_by"
        style="@style/CardText" 
	        android:textSize="18sp"
	        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="89dp"
        android:layout_below="@+id/tvBy"
        android:background="@color/white"
        android:paddingBottom="5dp"
                android:layout_marginTop="10dp"
        
        android:paddingTop="5dp"
        android:src="@drawable/c4a" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="fill_parent"
        android:layout_height="69dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:background="@color/white"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/brand_banner" />

</RelativeLayout>