<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:padding="3dp"
    >

    <EditText
        android:id="@+id/add_title"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        style="@style/CardTitle"
        android:background="@color/grey_blue"
        android:padding="10dp"
        android:ems="10">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:background="@color/grey_blue"
        android:clickable="true"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_action_photo" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/CardTitle"
                android:text="@string/add_picture" />

        </RelativeLayout>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
       android:layout_height="50dp"
        android:background="@color/grey_blue"
        android:padding="10dp"
        android:clickable="true"
        android:layout_marginTop="6dp" >

        <ImageView
            android:id="@+id/ivVideo"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_video"
            android:layout_marginRight="20dp" />
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvVid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/CardTitle"
                android:text="@string/add_video" />

        </RelativeLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/grey_blue"
        android:padding="10dp"
        android:clickable="true"
        android:layout_marginTop="6dp" >

        <ImageView
            android:id="@+id/ivAudio"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_action_audio" />
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvAud"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/CardTitle"
                android:text="@string/add_audio" />

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:background="@color/grey_blue"
        android:clickable="true"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/ivImport"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_action_attach" />
		<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/tvImport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                style="@style/CardTitle"
                android:text="@string/import_from_gallery" />

        </RelativeLayout>
    </LinearLayout>
    
</LinearLayout>