<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
     >

        <!--  Header  Starts-->

     <RelativeLayout
         android:id="@+id/header"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
         android:background="@color/red">

             <!-- Logo Start-->

             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="match_parent"
                 android:layout_height="88dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:src="@drawable/logo" />

          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_below="@+id/logo"
              android:layout_centerHorizontal="true"
              android:text="@string/strapline"
              android:textColor="@color/white"
              android:textSize="22sp"
              style="@style/CardTitle" />

         </RelativeLayout>

<LinearLayout
    android:id="@+id/widget_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.2">

   <LinearLayout
                         android:id="@+id/add_picture"
                         android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@color/metro_green"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    >
		            <ImageView
		                android:id="@+id/ivButton1"
		                android:layout_width="wrap_content"
		                android:layout_height="20dp"
		                android:layout_gravity="center"
		                android:src="@drawable/camera" />
					<TextView
		                android:id="@+id/textView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:textColor="#ffffff"
		                android:text="@string/add_picture"
		                android:textSize="15sp"
              			style="@style/CardTitle" />
				</LinearLayout>
    
   <LinearLayout
                         android:id="@+id/add_video"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@color/metro_yellow"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    >
				<ImageView
	                android:id="@+id/ivButton2"
	                android:layout_width="wrap_content"
	                android:layout_height="20dp"
	                 android:layout_gravity="center"
	                android:src="@drawable/video" />
				<TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                 android:layout_gravity="center"
	                android:textColor="#ffffff"
	                android:text="@string/add_video"
	                android:textSize="15sp"
              		style="@style/CardTitle" />
				</LinearLayout>
           
              <LinearLayout
                  android:id="@+id/add_audio"  
                  android:clickable="true"
                  android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@color/metro_blue"
                    android:gravity="center"
                    android:layout_margin="5dp"
                    >
					<ImageView
		                android:id="@+id/ivButton3"
		                android:layout_width="wrap_content"
		                android:layout_height="20dp"
		                android:layout_gravity="center"
		                android:src="@drawable/audio" />
					<TextView
		                android:id="@+id/textView1"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		               	android:layout_gravity="center"
		                android:layout_below="@+id/ivButton3"
		                android:textColor="#ffffff"
		                android:text="@string/add_audio"
		                android:textSize="15sp"
              			style="@style/CardTitle" />
				</LinearLayout>

</LinearLayout> 
<TableLayout
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:stretchColumns="*"
    android:layout_weight="0.4">

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" >
        <RelativeLayout
            android:id="@+id/load_assignments"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@color/black"
            android:clickable="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
             >

            <TextView
                android:id="@+id/assignmentsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageView2"
                android:textColor="#ffffff"
                android:text="@string/title_assignments"
                style="@style/CardTitle"
              android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_action_edit" />

        </RelativeLayout>
 
    </TableRow>
 
   <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5">
 
        <RelativeLayout
            android:id="@+id/load_reports"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.50"
            android:background="@color/metro_yellow"
            android:clickable="true"
            android:layout_margin="5dp"
             >
<TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageView4"
                android:textColor="#ffffff"
                android:text="@string/my_reports"
                style="@style/CardTitle"
              android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/icon_reports" />
            

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/load_lessons"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.39"
            android:background="@color/red" 
            android:clickable="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            >
<TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/imageView3"
                android:textColor="#ffffff"
                android:text="@string/title_lessons"
                style="@style/CardTitle"
              android:textSize="15sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_help" />
            

        </RelativeLayout>

    </TableRow>
 
</TableLayout>
</LinearLayout>